syntax = "proto3";

package product;

option go_package = "github.com/stpnv0/protos/gen/go/product;product";

import "google/protobuf/empty.proto";

service Product {
    rpc AddSneaker(AddSneakerRequest) returns (Sneaker);
    rpc GetSneakerByID(GetSneakerByIDRequest) returns (Sneaker);
    rpc GetSneakersByIDs(GetSneakersByIDsRequest) returns (GetSneakersByIDsResponse);
    rpc GetAllSneakers(GetAllSneakersRequest) returns (GetAllSneakersResponse);
    rpc DeleteSneaker(DeleteSneakerRequest) returns (google.protobuf.Empty);
}

message Sneaker {
    int64 id = 1;
    string title = 2;
    float price = 3;
    string image_url = 4;
}

message AddSneakerRequest {
    string title = 1;
    float price = 2;
    string image_url = 3;
}

message GetSneakerByIDRequest {
    int64 id = 1;
}

message GetSneakersByIDsRequest {
    repeated int64 ids = 1;
}

message GetSneakersByIDsResponse {
    repeated Sneaker sneakers = 1;
}

message GetAllSneakersRequest {
    // В будущем здесь могут быть параметры для пагинации
}

message GetAllSneakersResponse {
    repeated Sneaker sneakers = 1;
}

message DeleteSneakerRequest {
    int64 id = 1;
}

